# backend/src/domain/entities/feedback.js
@@ -1,5 +1,5 @@
 class Feedback {
-  constructor(id, fullname, message, rating, createdAt) {
+  constructor(id, fullname, message, createdAt) {
     this.id = id;
     this.fullname = fullname;
     this.message = message;
