# backend/src/routes/feedbackRoutes.js
@@ -36,23 +36,6 @@ router.post("/", feedbackController.createFeedback);
  *           items:
  *             $ref: '#/definitions/Feedback'
  */
-router.get("/", authMiddleware.protected, feedbackController.getAllFeedback);
-
-/**
- * @swagger
- * /:
- *   get:
- *     tags:
- *       - Feedback by ID
- *     description: Get all feedback
- *     responses:
- *       200:
- *         description: Success
- */
-router.get(
-  "/:id",
-  authMiddleware.protected,
-  feedbackController.getFeedbackById
-);
+router.get("/", feedbackController.getAllFeedback);
 
 module.exports = router;
