# backend/src/swagger.json
@@ -33,33 +33,8 @@
       },
       "get": {
         "tags": ["Feedback"],
-        "summary": "Get all feedback",
+        "summary": "Get all customer feedback",
         "description": "Get all customer feedback",
-        "responses": {
-          "200": {
-            "description": "A list of feedback",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Feedback"
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "bearerAuth": [],
-            "apiKeyAuth": []
-          }
-        ]
-      }
-    },
-    "/feedback/{id}": {
-      "get": {
-        "tags": ["Feedback"],
-        "summary": "Get feedback by feedback ID",
-        "description": "Get feedback by feedback ID",
-
         "responses": {
           "200": {
             "description": "A list of feedback",
@@ -91,6 +66,7 @@
             "description": "Admin user added",
             "required": true,
             "schema": {
+              "type": "object",
               "$ref": "#/definitions/Admin"
             }
           }
@@ -100,18 +76,36 @@
             "description": "Admin successfully added"
           }
         }
+      },
+      "get": {
+        "tags": ["Admin"],
+        "summary": "Get all admin users",
+        "description": "Get all admin users",
+        "parameters": [
+          {
+            "description": "Get all admin users",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Admin"
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Admin users returned"
+          }
+        }
       }
     }
   },
   "definitions": {
     "Feedback": {
       "type": "object",
-      "required": ["fullname", "message"],
+      "required": ["id"],
       "properties": {
-        "fullname": {
-          "type": "string"
-        },
-        "message": {
+        "id": {
           "type": "string"
         }
       }
